@@ -683,7 +683,7 @@ $pgv_lang["aunt"]						= "Tante";
 $pgv_lang["uncle"]						= "Onkel";
 $pgv_lang["nephew"]						= "Neffe";
 $pgv_lang["niece"]						= "Nichte";
-$pgv_lang["firstcousin"]				= "Vetter ersten Grades";
+$pgv_lang["firstcousin"]				= "Cousin";
 $pgv_lang["femalecousin"]				= "Cousine";
 $pgv_lang["malecousin"]					= "Cousin";
 $pgv_lang["relationship_to_me"]			= "Verwandtschaft zu mir";
@@ -879,46 +879,46 @@ $pgv_lang["female_cousin_18"]			= "Cousine 18. Grades";
 $pgv_lang["female_cousin_19"]			= "Cousine 19. Grades";
 $pgv_lang["female_cousin_20"]			= "Cousine 20. Grades";
 $pgv_lang["female_cousin_n"]			= "Cousine %d. Grades";
-$pgv_lang["removed_ascending_1"]		= "1. Grades, steigend";
-$pgv_lang["removed_ascending_2"]		= "2. Grades, steigend";
-$pgv_lang["removed_ascending_3"]		= "3. Grades, steigend";
-$pgv_lang["removed_ascending_4"]		= "4. Grades, steigend";
-$pgv_lang["removed_ascending_5"]		= "5. Grades, steigend";
-$pgv_lang["removed_ascending_6"]		= "6. Grades, steigend";
-$pgv_lang["removed_ascending_7"]		= "7. Grades, steigend";
-$pgv_lang["removed_ascending_8"]		= "8. Grades, steigend";
-$pgv_lang["removed_ascending_9"]		= "9. Grades, steigend";
-$pgv_lang["removed_ascending_10"]		= "10. Grades, steigend";
-$pgv_lang["removed_ascending_11"]		= "11. Grades, steigend";
-$pgv_lang["removed_ascending_12"]		= "12. Grades, steigend";
-$pgv_lang["removed_ascending_13"]		= "13. Grades, steigend";
-$pgv_lang["removed_ascending_14"]		= "14. Grades, steigend";
-$pgv_lang["removed_ascending_15"]		= "15. Grades, steigend";
-$pgv_lang["removed_ascending_16"]		= "16. Grades, steigend";
-$pgv_lang["removed_ascending_17"]		= "17. Grades, steigend";
-$pgv_lang["removed_ascending_18"]		= "18. Grades, steigend";
-$pgv_lang["removed_ascending_19"]		= "19. Grades, steigend";
-$pgv_lang["removed_ascending_20"]		= "20. Grades, steigend";
-$pgv_lang["removed_descending_1"]		= "1. Grades, senkend";
-$pgv_lang["removed_descending_2"]		= "2. Grades, senkend";
-$pgv_lang["removed_descending_3"]		= "3. Grades, senkend";
-$pgv_lang["removed_descending_4"]		= "4. Grades, senkend";
-$pgv_lang["removed_descending_5"]		= "5. Grades, senkend";
-$pgv_lang["removed_descending_6"]		= "6. Grades, senkend";
-$pgv_lang["removed_descending_7"]		= "7. Grades, senkend";
-$pgv_lang["removed_descending_8"]		= "8. Grades, senkend";
-$pgv_lang["removed_descending_9"]		= "9. Grades, senkend";
-$pgv_lang["removed_descending_10"]		= "10. Grades, senkend";
-$pgv_lang["removed_descending_11"]		= "11. Grades, senkend";
-$pgv_lang["removed_descending_12"]		= "12. Grades, senkend";
-$pgv_lang["removed_descending_13"]		= "13. Grades, senkend";
-$pgv_lang["removed_descending_14"]		= "14. Grades, senkend";
-$pgv_lang["removed_descending_15"]		= "15. Grades, senkend";
-$pgv_lang["removed_descending_16"]		= "16. Grades, senkend";
-$pgv_lang["removed_descending_17"]		= "17. Grades, senkend";
-$pgv_lang["removed_descending_18"]		= "18. Grades, senkend";
-$pgv_lang["removed_descending_19"]		= "19. Grades, senkend";
-$pgv_lang["removed_descending_20"]		= "20. Grades, senkend";
+$pgv_lang["removed_ascending_1"]		= ", 1. Stufe steigend";
+$pgv_lang["removed_ascending_2"]		= ", 2. Stufe steigend";
+$pgv_lang["removed_ascending_3"]		= ", 3. Stufe steigend";
+$pgv_lang["removed_ascending_4"]		= ", 4. Stufe steigend";
+$pgv_lang["removed_ascending_5"]		= ", 5. Stufe steigend";
+$pgv_lang["removed_ascending_6"]		= ", 6. Stufe steigend";
+$pgv_lang["removed_ascending_7"]		= ", 7. Stufe steigend";
+$pgv_lang["removed_ascending_8"]		= ", 8. Stufe steigend";
+$pgv_lang["removed_ascending_9"]		= ", 9. Stufe steigend";
+$pgv_lang["removed_ascending_10"]		= ", 10. Stufe steigend";
+$pgv_lang["removed_ascending_11"]		= ", 11. Stufe steigend";
+$pgv_lang["removed_ascending_12"]		= ", 12. Stufe steigend";
+$pgv_lang["removed_ascending_13"]		= ", 13. Stufe steigend";
+$pgv_lang["removed_ascending_14"]		= ", 14. Stufe steigend";
+$pgv_lang["removed_ascending_15"]		= ", 15. Stufe steigend";
+$pgv_lang["removed_ascending_16"]		= ", 16. Stufe steigend";
+$pgv_lang["removed_ascending_17"]		= ", 17. Stufe steigend";
+$pgv_lang["removed_ascending_18"]		= ", 18. Stufe steigend";
+$pgv_lang["removed_ascending_19"]		= ", 19. Stufe steigend";
+$pgv_lang["removed_ascending_20"]		= ", 20. Stufe steigend";
+$pgv_lang["removed_descending_1"]		= ", 1. Stufe fallend";
+$pgv_lang["removed_descending_2"]		= ", 2. Stufe fallend";
+$pgv_lang["removed_descending_3"]		= ", 3. Stufe fallend";
+$pgv_lang["removed_descending_4"]		= ", 4. Stufe fallend";
+$pgv_lang["removed_descending_5"]		= ", 5. Stufe fallend";
+$pgv_lang["removed_descending_6"]		= ", 6. Stufe fallend";
+$pgv_lang["removed_descending_7"]		= ", 7. Stufe fallend";
+$pgv_lang["removed_descending_8"]		= ", 8. Stufe fallend";
+$pgv_lang["removed_descending_9"]		= ", 9. Stufe fallend";
+$pgv_lang["removed_descending_10"]		= ", 10. Stufe fallend";
+$pgv_lang["removed_descending_11"]		= ", 11. Stufe fallend";
+$pgv_lang["removed_descending_12"]		= ", 12. Stufe fallend";
+$pgv_lang["removed_descending_13"]		= ", 13. Stufe fallend";
+$pgv_lang["removed_descending_14"]		= ", 14. Stufe fallend";
+$pgv_lang["removed_descending_15"]		= ", 15. Stufe fallend";
+$pgv_lang["removed_descending_16"]		= ", 16. Stufe fallend";
+$pgv_lang["removed_descending_17"]		= ", 17. Stufe fallend";
+$pgv_lang["removed_descending_18"]		= ", 18. Stufe fallend";
+$pgv_lang["removed_descending_19"]		= ", 19. Stufe fallend";
+$pgv_lang["removed_descending_20"]		= ", 20. Stufe fallend";
 //-- GEDCOM edit utility
 $pgv_lang["check_delete"]				= "Möchten Sie dieses Ereignis wirklich löschen?";
 $pgv_lang["access_denied"]				= "<b>Zugriff verweigert</b><br />Sie besitzen hierfür keine Erlaubnis.";
